--- a/todo.txt
+++ b/todo.txt
@@ -2,11 +2,19 @@
 
 
 
-
+firewalld over ufw?
 gvfs gvfs-mtp
 install essential funciton os-prober on dualboot if (now on servermode false)
 change set keymap function
 configure network funciton
 make SWAP_SIZE do someting
 add max option to ROOT_SIZE
+fix keyboard laguage us be azerty qwerty support
+fix ssh working out of box
+fix dual boot partition table stuffs
 fix grub - didnt work after first test
+
+install postinstall and make it run on boot.
+at end of postinstall disable run on boot.
+
+option REMOVE_INSTALLERS to remove install files or leave them in home?
